# message-campaign-engagement-analysis

./: .gitignore  Sampling.ipynb  capstone_notebook.ipynb  client_level_analysis.ipynb  combining_data.ipynb  data_analysis.ipynb  pyproject.toml  sampling_diagnostics.ipynb
EDA/sebapaik/: sebapaik_EDA.ipynb
EDA/sgf/: monthly_engagement_summary.csv  monthly_engagement_summary_bulk.csv  sgf_EDA.ipynb  user_time_segments_snapshot.csv
docs/: paper.blg  paper.tex
nd_notebooks/: README.md  feature_engineering.ipynb  healthCheck_EDA.ipynb
sampling/: Sampling.ipynb  combining_data.ipynb  sampling_diagnostics.ipynb
sampling/data/: README.md
src/: data_loading.py  feature_engineering.py  preprocess_for_fe.py
src/features/: clients_expectation_deviation_features.py  engagement_features.py  global_campaign_performance_features.py  market_features.py  rolling_features.py  spam_related_features.py  temporal_features.py
theory/: 20251120_isaac_notes.tex
